--- a/frontend/index.css
+++ b/frontend/index.css
@@ -209,6 +209,34 @@ body {
   font-size: 1.2rem;
 }
 
+.input-line {
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  margin-bottom: 1rem;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-line label {
+  font-weight: bold;
+}
+
+.input-line input {
+  width: 7em;
+  padding: 5px;
+  font-size: 1.2rem;
+}
+
+.error-input {
+  color: white;
+  background-color: crimson;
+}
+.error-input::placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
 .footer {
   display: flex;
   justify-content: center;
@@ -266,9 +294,32 @@ body {
   padding: 10px;
 }
 
+.div-edit-button {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.div-edit-button button {
+  width: 100px;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  font-weight: bold;
+  padding: 10px;
+}
+
 .header {
   color: #fff;
   margin-bottom: 2rem;
+}
+
+.form-edit {
+  margin-top: 0.67em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .transaction-button {
