gestion de connexion avec des mauvais login

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -229,6 +229,10 @@ body {
   font-size: 1.2rem;
 }
 
+.error-text {
+  color: crimson;
+}
+
 .error-input {
   color: white;
   background-color: crimson;
